--- a/index.html
+++ b/index.html
@@ -2,8 +2,42 @@
 <html>
 <head>
 	<title>details</title>
+	<style media="screen">
+	.flexParent{
+		display:flex;
+	flex-direction:row;
+		justify-content: flex-end;
+	}
+	.child1{
+		width:30%;
+		margin:2%;
+		padding:2%;
+		border:2px solid #ddd;
+	}
+	.child2{
+		width:70%;
+		margin:2%;
+		padding:2%;
+		border:2px solid #ddd;
+	}
+	img{
+	width:70%;
+	height:auto;
+	display: block;
+	margin-left: auto;
+	border-radius: 50%;
+}
+</style>
+
+}
 </head>
 <body>
-<h2>mouse</h2>
+<div class="flexParent">
+	<div class="child1">
+		<img src="img/i.jpg" >
+	</div>
+
+	<div class="child2">B</div>
+
 </body>
 </html>>
