--- a/index.html
+++ b/index.html
@@ -1,43 +1,27 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>details</title>
-	<style media="screen">
-	.flexParent{
-		display:flex;
-	flex-direction:row;
-		justify-content: flex-end;
-	}
-	.child1{
-		width:30%;
-		margin:2%;
-		padding:2%;
-		border:2px solid #ddd;
-	}
-	.child2{
-		width:70%;
-		margin:2%;
-		padding:2%;
-		border:2px solid #ddd;
-	}
-	img{
-	width:70%;
-	height:auto;
-	display: block;
-	margin-left: auto;
-	border-radius: 50%;
-}
-</style>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1">
+	<link rel="stylesheet" href="style.css">
 
-}
+	<title>details</title>
+
 </head>
 <body>
 <div class="flexParent">
 	<div class="child1">
-		<img src="img/i.jpg" >
+		<img src="img/2.jpg" >
+		<h1>SINDHU</h1>
+		<h2>(fresher)</h2><hr>
+		<h2>9793663277</h2><hr>
+		<a href="mail to:srilakshmidhatla6@gmail.com">srilakshmidhatla@gmail.com</a>
+
 	</div>
 
-	<div class="child2">B</div>
+	<div class="child2"></div>
+</div>
+	<script type="text/javascript" src="main.js"></script>
 
 </body>
-</html>>
+</html>
